force-app/main/default/objects/Territory__c/fields/Active_Territory__c.field-meta.xml
<CustomField>
    <fullName>Active_Territory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Territory</label>
    <type>Checkbox</type>
</CustomField>