force-app/main/default/objects/Territory__c/fields/CHES_Area_Development_Manager__c.field-meta.xml
<CustomField>
    <fullName>CHES_Area_Development_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Clean Harbors Environmental Services development manager (Hunter)</description>
    <label>CHES Area Development Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory7</relationshipName>
    <type>Lookup</type>
</CustomField>