force-app/main/default/objects/Territory__c/fields/isTAM__c.field-meta.xml
<CustomField>
    <fullName>isTAM__c</fullName>
    <description>Indicates if the Territory Code is a TAM or a SAM</description>
    <formula>or(
and(
text(Primary_Business__c) &lt;&gt; &apos;Safety-Kleen&apos;
,Or(CONTAINS(Territory_Name__c, &apos;TAM&apos;),CONTAINS(Territory_Name__c, &apos;SAM&apos;))
)
, and(
     CONTAINS(Territory_code__c, &apos;TAM&apos;)
     ,text(Primary_Business__c) = &apos;Safety-Kleen&apos;
     )  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isTAM</label>
    <type>Checkbox</type>
</CustomField>