force-app/main/default/objects/Territory__c/fields/My_Sales_Director_Territories__c.field-meta.xml
<CustomField>
    <fullName>My_Sales_Director_Territories__c</fullName>
    <description>Where the user is the sales Director</description>
    <formula>IF(  Sales_Director__c = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Sales Director Territories</label>
    <type>Checkbox</type>
</CustomField>