force-app/main/default/objects/Territory__c/fields/My_Sales_Manager_Territory__c.field-meta.xml
<CustomField>
    <fullName>My_Sales_Manager_Territory__c</fullName>
    <formula>IF(  Sales_Manager__c = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Sales Manager Territory</label>
    <type>Checkbox</type>
</CustomField>