force-app/main/default/objects/Territory__c/fields/On_Vacation__c.field-meta.xml
<CustomField>
    <fullName>On_Vacation__c</fullName>
    <formula>AND( 
Vacation_Start_Date__c &lt;= Today(), 
Vacation_End_Date__c &gt;= Today() 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Vacation</label>
    <type>Checkbox</type>
</CustomField>