force-app/main/default/objects/Territory__c/fields/Open_Territory__c.field-meta.xml
<CustomField>
    <fullName>Open_Territory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Territory</label>
    <type>Checkbox</type>
</CustomField>