force-app/main/default/objects/Territory__c/fields/Operations_VP__c.field-meta.xml
<CustomField>
    <fullName>Operations_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory</relationshipName>
    <type>Lookup</type>
</CustomField>