force-app/main/default/objects/Territory__c/fields/Primary_Branch__c.field-meta.xml
<CustomField>
    <fullName>Primary_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch territory is tied to</description>
    <label>Primary Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Territory</relationshipLabel>
    <relationshipName>Territory</relationshipName>
    <type>Lookup</type>
</CustomField>