force-app/main/default/objects/Territory__c/fields/Primary_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Branch_Code__c</fullName>
    <formula>Primary_Branch__r.Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Branch Code</label>
    <type>Text</type>
</CustomField>