force-app/main/default/objects/Territory__c/fields/Primary_Branch_Desc7__c.field-meta.xml
<CustomField>
    <fullName>Primary_Branch_Desc7__c</fullName>
    <formula>Primary_Branch__r.branch_descr_amt7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Branch Desc7</label>
    <type>Text</type>
</CustomField>