force-app/main/default/objects/Territory__c/fields/Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business__c</fullName>
    <label>Operating Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>CYN Oil</fullName>
                <label>CYN</label>
            </value>
            <value>
                <fullName>CYN Environmental</fullName>
                <isActive>false</isActive>
                <label>CYN Environmental</label>
            </value>
            <value>
                <fullName>Daylighting Services</fullName>
            </value>
            <value>
                <fullName>DFW</fullName>
            </value>
            <value>
                <fullName>Emerald Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>H2O</fullName>
            </value>
            <value>
                <fullName>Healthcare Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Murphys Oil</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Performance Plus Products</fullName>
                <isActive>false</isActive>
                <label>Performance Plus Products</label>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>RS Used Oil</fullName>
                <isActive>false</isActive>
                <label>RS Used Oil</label>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
                <isActive>false</isActive>
                <label>Sales Operations</label>
            </value>
            <value>
                <fullName>Seismic</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen</fullName>
                <label>SK ENV</label>
            </value>
            <value>
                <fullName>Synergy</fullName>
            </value>
            <value>
                <fullName>Kleen Performance Products</fullName>
                <label>SK KPP</label>
            </value>
            <value>
                <fullName>Surface Rentals</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Thermo Fluids</fullName>
            </value>
			<value>
                <fullName>Thompson</fullName>
            </value>
			<value>
                <fullName>Noble Oil</fullName>
            </value>
            <value>
                <fullName>HEPACO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>