force-app/main/default/objects/Territory__c/fields/PSP_Type__c.field-meta.xml
<CustomField>
    <fullName>PSP_Type__c</fullName>
    <formula>IF(

    ISBLANK(TEXT(Primary_Business__c)),

    NULL,

    TEXT(Primary_Business__c) + &quot; - &quot;

) + 

IF(

    ISBLANK(TEXT(Territory_Type__c)),

    NULL,

    TEXT(Territory_Type__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSP - Type</label>
    <type>Text</type>
</CustomField>