force-app/main/default/objects/Territory__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory1</relationshipName>
    <type>Lookup</type>
</CustomField>