force-app/main/default/objects/Territory__c/fields/Sales_EVP__c.field-meta.xml
<CustomField>
    <fullName>Sales_EVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales SVP/EVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory3</relationshipName>
    <type>Lookup</type>
</CustomField>