force-app/main/default/objects/Territory__c/fields/Sales_Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Role__c</fullName>
    <formula>Sales_Manager__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager Role</label>
    <type>Text</type>
</CustomField>