force-app/main/default/objects/Territory__c/fields/Secondary_Branch__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional Branch the Territory is tied to.</description>
    <label>Secondary Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Territory (Branch 2)</relationshipLabel>
    <relationshipName>Territory1</relationshipName>
    <type>Lookup</type>
</CustomField>