force-app/main/default/objects/Territory__c/fields/Send_Leads_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Leads_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Temporarily sends leads to this user when Territory Owner is on vacation</description>
    <inlineHelpText>When Territory Owner is on vacation this user will receive the leads.</inlineHelpText>
    <label>Send Leads To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory5</relationshipName>
    <type>Lookup</type>
</CustomField>