force-app/main/default/objects/Territory__c/fields/slsOps_temp_flag_FS__c.field-meta.xml
<CustomField>
    <fullName>slsOps_temp_flag_FS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>slsOps temp flag (FS)</label>
    <type>Checkbox</type>
</CustomField>