force-app/main/default/objects/Territory__c/fields/slsOps_temp_FS_Specialist__c.field-meta.xml
<CustomField>
    <fullName>slsOps_temp_FS_Specialist__c</fullName>
    <description>For assigning FS Specialists</description>
    <label>slsOps temp FS Specialist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>