force-app/main/default/objects/Territory__c/fields/Specialist__c.field-meta.xml
<CustomField>
    <fullName>Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specialist that covers territory</description>
    <label>Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory8</relationshipName>
    <type>Lookup</type>
</CustomField>