force-app/main/default/objects/Territory__c/fields/temp_Territory_Alignment_Oversite__c.field-meta.xml
<CustomField>
    <fullName>temp_Territory_Alignment_Oversite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Owner 2021</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory6</relationshipName>
    <type>Lookup</type>
</CustomField>