force-app/main/default/objects/Territory__c/fields/Territory_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory ID 18</label>
    <type>Text</type>
</CustomField>