force-app/main/default/objects/Territory__c/fields/Territory_Language__c.field-meta.xml
<CustomField>
    <fullName>Territory_Language__c</fullName>
    <label>Territory Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>