force-app/main/default/objects/Territory__c/fields/Territory_Owner_equals_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_equals_Sales_Manager__c</fullName>
    <formula>if( Territory_OwnerID__c = Sales_Manager__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner equals Sales Manager</label>
    <type>Checkbox</type>
</CustomField>