force-app/main/default/objects/Territory__c/fields/Territory_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_Name__c</fullName>
    <formula>Territory_OwnerID__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner Name</label>
    <type>Text</type>
</CustomField>