force-app/main/default/objects/Territory__c/fields/Territory_Owner_Sales_Branch__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_Sales_Branch__c</fullName>
    <formula>Territory_OwnerID__r.Sales_Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner Sales Branch</label>
    <type>Text</type>
</CustomField>