force-app/main/default/objects/Territory__c/fields/Territory_Type__c.field-meta.xml
<CustomField>
    <fullName>Territory_Type__c</fullName>
    <label>Territory Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>ISAM</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>