force-app/main/default/objects/Territory__c/fields/Territory_update_date__c.field-meta.xml
<CustomField>
    <fullName>Territory_update_date__c</fullName>
    <description>set date for owner updates</description>
    <label>Territory update date</label>
    <type>DateTime</type>
</CustomField>