force-app/main/default/objects/Territory__c/fields/Vacation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Vacation_End_Date__c</fullName>
    <description>Vacation end date of the territory owner</description>
    <inlineHelpText>Vacation end date of the territory owner</inlineHelpText>
    <label>Vacation End Date</label>
    <type>Date</type>
</CustomField>