force-app/main/default/objects/Territory__c/fields/Vacation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Start_Date__c</fullName>
    <description>Vacation start date of the territory owner</description>
    <inlineHelpText>Vacation start date of the territory owner</inlineHelpText>
    <label>Vacation Start Date</label>
    <type>Date</type>
</CustomField>