force-app/main/default/objects/Territory__c/validationRules/Territory_Name_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Territory_Name_cannot_be_changed</fullName>
    <active>true</active>
    <description>Territory Name cannot be changed  by someone outside of Sales Operations</description>
    <errorConditionFormula>and( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;Sales Operations&quot;, 
$Profile.Name &lt;&gt; &quot;Integration&quot;, 
ischanged(Name) 

)</errorConditionFormula>
    <errorDisplayField>Territory_Name__c</errorDisplayField>
    <errorMessage>Territory Name cannot be changed  by someone outside of Sales Operations.</errorMessage>
</ValidationRule>