force-app/main/default/objects/Territory__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Primary_Business__c</columns>
    <columns>Area__c</columns>
    <columns>Region__c</columns>
    <columns>NAME</columns>
    <columns>Territory_Name__c</columns>
    <columns>Territory_OwnerID__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Sales_EVP__c</columns>
    <columns>isTAM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SK</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>contains</operation>
        <value>Canada</value>
    </filters>
    <label>All</label>
</ListView>