force-app/main/default/objects/Territory__c/listViews/Assigned_to_SK01.listView-meta.xml
<ListView>
    <fullName>Assigned_to_SK01</fullName>
    <columns>NAME</columns>
    <columns>Manager_Name__c</columns>
    <columns>Territory_code__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Territory_OwnerID__c</columns>
    <columns>Active_Territory__c</columns>
    <columns>Open_Territory__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_OwnerID__c</field>
        <operation>contains</operation>
        <value>SK01</value>
    </filters>
    <label>Assigned to SK01</label>
    <language>en_US</language>
    <sharedTo>
        <group>Sales_Admin</group>
    </sharedTo>
</ListView>