force-app/main/default/objects/Territory__c/listViews/BPS_INAM_Bulk_Products_and_Services.listView-meta.xml
<ListView>
    <fullName>BPS_INAM_Bulk_Products_and_Services</fullName>
    <columns>NAME</columns>
    <columns>Territory_OwnerID__c</columns>
    <columns>Primary_Business__c</columns>
    <columns>Region__c</columns>
    <columns>Area__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Manager_Name__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Open_Territory__c</columns>
    <columns>Active_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>BPS-IS</value>
    </filters>
    <filters>
        <field>Territory_code__c</field>
        <operation>notContain</operation>
        <value>Close</value>
    </filters>
    <label>INS BPS INAM(Bulk Products and Services)</label>
    <language>en_US</language>
</ListView>