force-app/main/default/objects/Territory__c/listViews/CASR.listView-meta.xml
<ListView>
    <fullName>CASR</fullName>
    <columns>Primary_Business__c</columns>
    <columns>NAME</columns>
    <columns>Territory_Name__c</columns>
    <columns>Territory_OwnerID__c</columns>
    <columns>Primary_Branch__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Manager_Name__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Open_Territory__c</columns>
    <columns>Active_Territory__c</columns>
    <columns>Territory_ID_18__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>CASR</value>
    </filters>
    <label>BPS CASR</label>
    <language>en_US</language>
</ListView>