force-app/main/default/objects/Territory__c/listViews/Ches_Territory_US_Gulf_Region_ST.listView-meta.xml
<ListView>
    <fullName>Ches_Territory_US_Gulf_Region_ST</fullName>
    <columns>Primary_Business__c</columns>
    <columns>Region__c</columns>
    <columns>Area__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>NAME</columns>
    <columns>Territory_OwnerID__c</columns>
    <columns>Specialist__c</columns>
    <columns>CHES_Area_Development_Manager__c</columns>
    <columns>Primary_Branch__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Manager_Name__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Sales_EVP__c</columns>
    <columns>Operations_VP__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Business__c</field>
        <operation>equals</operation>
        <value>Field Services,Industrial Services,Technical Services</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>US Gulf Region</value>
    </filters>
    <filters>
        <field>Area__c</field>
        <operation>contains</operation>
        <value>Southern Texas</value>
    </filters>
    <label>Ches Territory - US Gulf Region (ST)</label>
    <language>en_US</language>
</ListView>