force-app/main/default/objects/Territory__c/listViews/Field_Service_Territories.listView-meta.xml
<ListView>
    <fullName>Field_Service_Territories</fullName>
    <columns>Region__c</columns>
    <columns>Area__c</columns>
    <columns>NAME</columns>
    <columns>Territory_Name__c</columns>
    <columns>Territory_OwnerID__c</columns>
    <columns>Primary_Branch__c</columns>
    <columns>Manager_Name__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Sales_EVP__c</columns>
    <columns>Operations_VP__c</columns>
    <columns>isTAM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Business__c</field>
        <operation>equals</operation>
        <value>Field Services</value>
    </filters>
    <filters>
        <field>Active_Territory__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Field Service Territories</label>
    <language>en_US</language>
</ListView>