force-app/main/default/objects/Territory__c/listViews/FS_Territory2.listView-meta.xml
<ListView>
    <fullName>FS_Territory2</fullName>
    <columns>Region__c</columns>
    <columns>Area__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>NAME</columns>
    <columns>Territory_OwnerID__c</columns>
    <columns>Primary_Branch__c</columns>
    <columns>Manager_Name__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Sales_EVP__c</columns>
    <columns>Operations_VP__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Business__c</field>
        <operation>equals</operation>
        <value>Technical Services</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>contains</operation>
        <value>US</value>
    </filters>
    <label>TS Territory US</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_but_CEO</group>
    </sharedTo>
</ListView>