force-app/main/default/objects/Territory__c/listViews/FS_Territory_Mazz.listView-meta.xml
<ListView>
    <fullName>FS_Territory_Mazz</fullName>
    <columns>NAME</columns>
    <columns>Territory_OwnerID__c</columns>
    <columns>Area__c</columns>
    <columns>Region__c</columns>
    <columns>Primary_Branch__c</columns>
    <columns>Manager_Name__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Operations_VP__c</columns>
    <columns>Sales_EVP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Business__c</field>
        <operation>equals</operation>
        <value>Field Services</value>
    </filters>
    <filters>
        <field>Territory_OwnerID__c</field>
        <operation>contains</operation>
        <value>Mazz</value>
    </filters>
    <label>FS Territory - Mazz review</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>