force-app/main/default/objects/Territory__c/listViews/FS_Territory_Northeast_Region.listView-meta.xml
<ListView>
    <fullName>FS_Territory_Northeast_Region</fullName>
    <columns>Region__c</columns>
    <columns>Area__c</columns>
    <columns>NAME</columns>
    <columns>Territory_Name__c</columns>
    <columns>Territory_OwnerID__c</columns>
    <columns>Primary_Branch__c</columns>
    <columns>Manager_Name__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Sales_EVP__c</columns>
    <columns>Operations_VP__c</columns>
    <columns>Primary_Branch_Code__c</columns>
    <columns>slsOps_temp_flag_FS__c</columns>
    <columns>slsOps_temp_FS_Specialist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Business__c</field>
        <operation>equals</operation>
        <value>Field Services</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Northeast Region</value>
    </filters>
    <label>FS Territory - Northeast Region</label>
    <language>en_US</language>
</ListView>